--- a/about.html
+++ b/about.html
@@ -97,22 +97,28 @@
     <div class="row">
       <!--foreach $arResult-->
       <div class="col-md-4">
-        <h4>Тесный контакт с заказчиком</h4>
-        <img src="/images/test-i-img-4.png" alt="#">
-        <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+        <div class="we-work-cell">
+          <h4>Тесный контакт с заказчиком</h4>
+          <img src="/images/test-i-img-4.png" alt="#">
+          <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+        </div>
       </div>
       <!--end foreach-->
 
       <div class="col-md-4">
-        <h4>Тесный контакт с заказчиком</h4>
-        <img src="/images/test-i-img-4.png" alt="#">
-        <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+        <div class="we-work-cell">
+          <h4>Тесный контакт с заказчиком</h4>
+          <img src="/images/test-i-img-4.png" alt="#">
+          <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+          </div>
       </div>
 
       <div class="col-md-4">
-        <h4>Тесный контакт с заказчиком</h4>
-        <img src="/images/test-i-img-4.png" alt="#">
-        <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+       <div class="we-work-cell">
+          <h4>Тесный контакт с заказчиком</h4>
+          <img src="/images/test-i-img-4.png" alt="#">
+          <p>дейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по </p>
+        </div>
       </div>
 
     </div>
