--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
           <nav class="col-md-4 col-sm-12 col-xs-col-12">
             <!--start component menu-->
               <button id="menu-show" class="show-menu">Меню</button>
+              <button id="callback-btn" class="feed-back-m-2"></button>
               <ul id="menu-top">
                 <li><a class="selected" href="#" title="#">портфолио</a></li>
                 <li><a href="#" title="#">блог</a></li>
@@ -49,7 +50,7 @@
           </div>
 
           <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
-            <div class="col-md-6">
+            <div class="col-md-6 phone-number">
               <!--start include area-->
                 <ul>
                   <li><strong>+7 (905) 403-25-20</strong></li>
