--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
-            <div class="col-md-6">
+            <div class="col-md-6 phone-number">
               <!--start include area-->
                 <ul>
                   <li><strong>+7 (905) 403-25-20</strong></li>
